--- a/quizFor21/index.html
+++ b/quizFor21/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Examen Final - Introducción a HTML</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <style>
         body { font-family: Arial, sans-serif; max-width: 600px; margin: auto; padding: 20px; }
         h1 { color: #333; }
@@ -100,8 +104,10 @@
             <p class="feedback" id="feedback-q10"></p>
         </div>
 
-        <button type="button" class="btn" onclick="checkAnswers()">Enviar Respuestas</button>
+        <!-- <button type="button" class="btn" onclick="checkAnswers()">Enviar Respuestas</button> -->
     </form>
+
+    <button type="button" class="btn" onclick="confirmSubmission()">Enviar Respuestas</button>
 
     <div class="result" id="result"></div>
 
@@ -118,6 +124,27 @@
             q9: { answer: "&lt;div&gt;", explanation: "&lt;div&gt; define una sección o contenedor en HTML." },
             q10: { answer: "id", explanation: "El atributo 'id' identifica un elemento único en HTML." }
         };
+
+        function confirmSubmission() {
+            Swal.fire({
+                title: "Estás por enviar las respuestas",
+                text: "¿Estás seguro de enviar las mismas o quieres revisar?",
+                icon: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Enviar respuestas"
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    checkAnswers();
+                    Swal.fire({
+                        title: "¡Enviado!",
+                        text: "Ahora verás tu puntuación",
+                        icon: "success"
+                    });
+                }
+            });
+        }
 
         function checkAnswers() {
             let score = 0;
@@ -147,6 +174,21 @@
             }
 
             document.getElementById('result').textContent = `Obtuviste ${score} de ${Object.keys(correctAnswers).length} respuestas correctas.`;
+
+            // Mostrar Toasty si la puntuación es perfecta
+            if (score === Object.keys(correctAnswers).length) {
+                Toastify({
+                    text: "¡Puntuación perfecta! 🎉",
+                    duration: 5000,
+                    gravity: "top",
+                    position: "center",
+                    backgroundColor: "linear-gradient(to right, #00b09b, #96c93d)",
+                    style: {
+                        color: "white",
+                        fontWeight: "bold"
+                    }
+                }).showToast();
+            }
         }
     </script>
 
