--- a/quizFor21/index.html
+++ b/quizFor21/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="question">
-            <p>8. ¿Cuál de las siguientes es una etiqueta de encabezado?</p>
+            <p>8. ¿Cuál de las siguientes es una etiqueta para un titulo principal?</p>
             <input type="radio" name="q8" value="correct"> &lt;h1&gt;<br>
             <input type="radio" name="q8" value="incorrect"> &lt;header&gt;<br>
             <input type="radio" name="q8" value="incorrect"> &lt;head&gt;<br>
